@@ -14,6 +14,7 @@ Bugfixes:
 - Exception is thrown when doing NetStream.seek operation (Jira SN-94)
 - Scope access does not work if invoked from external Application (Jira APPSERVER-306)
 - Childscopes not visible on customly created scopes (Jira APPSERVER-298)
+- Config removal dynamically created room scopes (Jira APPSERVER-165)
 
 Red5 0.8.0 RC1 (2008-09-29)
 ---------------------------
